package ejercicio1;

public interface Post {
public Post getOrigen();
}
