@startuml
class Twitter {
-yaRegistrado():boolean
+agregarUsuario():boolean
+eliminarUsuario():boolean
}
Twitter --> Usuario : -usuarios 0..*

class Usuario {
-screenName:String
-LIMITE:Integer
-superaLimite(text:String):boolean
+agregarTweet(text:String):boolean
+agregarPost(post:Post):boolean
+tengoPost(post:Post):boolean
+limiparRetweets(user:Usuario)
}
Usuario --> Post : -posts 0..*

interface Post{
+getOrigen():Post
}

class Tweet implements Post{
-text:String
+getOrigen():Post
+reTweet(user:Usuario):boolean
}
class Retweet implements Post{
+getOrigen():Post
}
Retweet --> Post : -origen 0..*
@enduml